<resources>
    <string name="app_name">AsfaltaME</string>

    <string name="menuOptReportList">Todos los Reclamos</string>
    <string name="menuOptNewReport">Nuevo Reclamo</string>
    <string name="menuOptPreferences">Preferencias</string>
    <string name="menuOptHelp">Ayuda</string>
    <string name="menuOptAbout">Acerca de</string>
    <string name="screenDetail">Detalle de Reclamo</string>
    <string name="mapSelectLocation">Seleccionar una ubicación</string>
    <string name="mapReportDetail">Detalle de Reclamo - Ubicación</string>
    <string name="mapNearReports">Reclamos Cercanos</string>

    <string-array name="reportType">
        <item>Todos</item>
        <item>Bache</item>
        <item>Hundimiento</item>
        <item>Tapa de alcantarilla hundida</item>
        <item>Múltiples Problemas</item>
    </string-array>

    <string name="dialogTitle">Agregar una foto</string>
    <string name="dialogGallery">Galería</string>
    <string name="dialogCamera">Cámara</string>

    <string name="email">Email</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="loginButton">Ingresar</string>
    <string name="registerButton">Registrarse</string>
    <string name="registerText1">No tenés una cuenta?</string>
    <string name="registerText2"><u>Registrate</u></string>
    <string name="loginText1">Ya tenés una cuenta?</string>
    <string name="loginText2"><u>Ingresá</u></string>

    <string name="location">Ubicación</string>
    <string name="actualLocation">Actual</string>
    <string name="otherLocation">Otra</string>
    <string name="reportType">Tipo de Reclamo</string>
    <string name="description">Descripción</string>
    <string name="addPicture">Agregar Foto</string>
    <string name="createReport">Crear Reclamo</string>

    <string name="detailMap">Ver en Mapa</string>
    <string name="supportReport">Apoyar reclamo</string>
    <string name="alreadyFixed">Ya fue arreglado</string>
    <string name="title_activity_maps">Map</string>

    <string name="showOnlyNear">Mostrar sólo los reclamos cercanos</string>
    <string name="typeFilter">Filtrar por tipo de reclamo:</string>

</resources>
