<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportListActivity"
    android:background="@color/colorBackground">

    <include layout="@layout/toolbar"/>

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1">-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->
            <android.support.v7.widget.SwitchCompat
                style="@style/SwitchCompatStyle"
                android:id="@+id/list_only_near"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/showOnlyNear"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/darkGray"
                android:text="@string/typeFilter"/>
            <Spinner
                android:id="@+id/list_type_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:textColor="@color/darkGray"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="@color/darkGray"/>

            <ListView
                android:id="@+id/list_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp" />
        <!--</LinearLayout>-->

    <!--</ScrollView>-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/darkGray"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/list_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/darkGray"
        app:backgroundTint="@color/white"
        android:text="@string/detailMap"/>
</LinearLayout>