<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.NewReportActivity"
    android:background="@color/colorBackground">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp">
        <ImageView
            android:id="@+id/detail_icon"
            android:layout_width="75dp"
            android:layout_height="75dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:textColor="@color/darkGray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewStart"
                    android:textColor="@color/darkGray"/>
                <TextView
                    android:id="@+id/detail_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/darkGray"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/darkGray"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/detail_map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/darkGray"
        app:backgroundTint="@color/button_color"
        android:text="@string/detailMap"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightGray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/detail_photo_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="20dp"
        android:horizontalSpacing="10dp"
        android:isScrollContainer="false"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/detail_add_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/darkGray"
        app:backgroundTint="@color/button_color"
        android:text="@string/addPicture"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/support_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGray"
            app:backgroundTint="@color/button_color"
            android:text="@string/supportReport"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/already_fixed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGray"
            app:backgroundTint="@color/button_color"
            android:text="@string/alreadyFixed"/>
    </LinearLayout>


</LinearLayout>